--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="hhttps://linkedin.com/in/seynab-abdirahman/">LinkedIn</a></p>
+          <p><a href="https://linkedin.com/in/seynab-abdirahman/">LinkedIn</a></p>
         </div>
       </div>
     </section>
